# copier-templates

./: .gitignore  CLAUDE.md  GAPS_TO_FIX.md  GAP_ANALYSIS.md  README.md  TODO.md  copier-templates.code-workspace  pyproject.toml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
addon/: copier.yml
backend_addon/: README.md  copier.yml  copier_hooks.py  extensions.py
backend_addon/template/: .editorconfig.jinja  .gitignore.jinja  .pre-commit-config.yaml.jinja  CHANGELOG.md.jinja  README.md.jinja  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
backend_addon/template/tests/: conftest.py.jinja  test_setup.py.jinja
behavior/: README.md  copier.yml  copier_hooks.py  tasks.py
behavior/template/tests/: test_behavior_{{behavior_module}}.py.jinja
content_type/: README.md  copier.yml  copier_hooks.py  extensions.py  tasks.py
controlpanel/: README.md  copier.yml  copier_hooks.py
form/: README.md  copier.yml  copier_hooks.py
indexer/: README.md  copier.yml  copier_hooks.py
mockup_pattern/: README.md  copier.yml  copier_hooks.py
plans/: plone-copier-templates.md
portlet/: README.md  copier.yml  copier_hooks.py
restapi_service/: README.md  copier.yml  copier_hooks.py  tasks.py
shared/: __init__.py  exceptions.py
shared/hooks/: __init__.py  addon_context.py  git_check.py  legacy_cleanup.py  legacy_context.py  project_context.py
shared/utils/: __init__.py  bobtemplate_cfg.py  content_types_scanner.py  plone_versions.py  pyproject_updater.py  xml_updater.py
site_initialization/: README.md  copier.yml  copier_hooks.py
subscriber/: README.md  copier.yml  copier_hooks.py
svelte_app/: README.md  copier.yml  copier_hooks.py
tests/: conftest.py  helpers.py  test_backend_addon.py  test_behavior.py  test_combinations.py  test_content_type.py  test_controlpanel.py  test_form.py  test_indexer.py  test_legacy_compat.py  test_mockup_pattern.py  test_plone_standards.py  test_portlet.py  test_restapi_service.py  test_site_initialization.py  test_subscriber.py  test_svelte_app.py  test_theme.py  test_theme_barceloneta.py  test_theme_basic.py  test_upgrade_step.py  test_view.py  test_viewlet.py  test_vocabulary.py  test_zope_instance.py  test_zope_setup.py
theme/: README.md  copier.yml  copier_hooks.py
theme_barceloneta/: README.md  copier.yml  copier_hooks.py
theme_basic/: README.md  copier.yml  copier_hooks.py
upgrade_step/: README.md  copier.yml  copier_hooks.py  extensions.py
view/: README.md  copier.yml  copier_hooks.py  extensions.py
viewlet/: README.md  copier.yml  copier_hooks.py
vocabulary/: README.md  copier.yml  copier_hooks.py
zope-setup/: README.md  copier.yml  copier_hooks.py  extensions.py
zope-setup/template/: .gitignore.jinja  README.md.jinja  pyproject.toml.jinja  tasks.py.jinja
zope_instance/: README.md  copier.yml  copier_hooks.py  extensions.py  tasks.py
(+122 files in other folders)
