[project]
name = "copier-templates"
version = "0.1.0"
description = "Multi-template Copier repository for Plone development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Plone Foundation", email = "foundation@plone.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
dev = [
    "copier>=9.0.0",
    "copier-template-extensions>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "tomlkit>=0.12.0",
    "pyyaml>=6.0.0",
    "hatchling"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: end-to-end tests that boot a real Plone site (slow; opt in with -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "*/template/**",
    "tmp",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# sys.path is intentionally modified before sibling imports so that
# copier hook submodules can use bare imports.
"shared/hooks/__init__.py" = ["E402"]
